--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "1.1-frase",
+  "name": "1.2-frase",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,5 +10,8 @@
     "test": "jest"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "jest": "^29.0.3"
+  }
 }
